# backend-sentiment

./: .vercelignore  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
app/: dependencies.py  main.py
app/core/: config.py  security.py
app/db/: database.py
app/internal/: admin.py
app/models/: __init__.py  enums.py  ig_account.py  ig_comment.py  ig_post.py  user.py
app/routers/: __init__.py  ig_accounts.py  ig_comments.py  ig_posts.py  indobert_sentiment.py  lexicon_sentiment.py  users.py
app/schemas/: apify.py  ig_account.py  ig_comment.py  ig_post.py  indobert.py  lexicon.py  user.py
app/sentiment/indobert_model/: config.json  model.onnx  tokenizer_config.json
app/sentiment/lexicon_based/: kamus_positif.csv
app/services/: __init__.py  apify_service.py  ig_account_service.py  ig_comment_service.py  ig_post_service.py  indobert_service.py  lexicon_service.py  user_service.py
public/: index.html
public/assets/: index-B38YLY0J.js  index-B38YLY0J.js.map  index-BiuUZc8f.css
tests/: test_main.py  test_users.py
